deployment/Kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-deployment
spec:
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: lnadev/home-page:1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: port-http

---
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
spec:
  selector:
    app: personal-website
  ports:
    - port: 80
      targetPort: port-http
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  tls:
  - hosts:
    - 'lna-dev.net'
    - 'www.lna-dev.net'
    secretName: personal-website-cert
  rules:
    - host: lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80
    - host: www.lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-redirection-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme-personal-website@kubernetescrd
spec:
  tls:
    - hosts:
        - "lna-dev.de"
        - "lna-dev.com"
      secretName: personal-website-redirection-cert
  rules:
    - host: lna-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80
    - host: lna-dev.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-redirection-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme-personal-website@kubernetescrd
spec:
  rules:
    - host: lna-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80
    - host: lna-dev.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80

---
# Needed because of HTTP to HTTPS redirecting
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80
    - host: www.lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectRegex:
    regex: '^https?://(?:www\.)?(.+)'
    replacement: "https://${1}"
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme-personal-website
spec:
  redirectRegex:
    regex: '.*'
    replacement: "https://lna-dev.net"
    permanent: true
